fix spacing

--- a/assets/css/slider.scss
+++ b/assets/css/slider.scss
@@ -55,7 +55,7 @@
 	.slick-list {
 		position: relative;
 		transition: all 0.4s ease-in-out !important;
-		width: calc(100% - 90px);
+		width: calc(100% - 45px);
 		margin-left: 45px;
 		margin-right: 45px;
 	}
